--- a/app/views/fabrics/new.html.erb
+++ b/app/views/fabrics/new.html.erb
@@ -6,6 +6,11 @@
     <%= f.text_field :name %>
   </p>
 
+    <p>
+    <%= f.label :color %><br>
+    <%= f.text_field :color %>
+  </p>
+
   <p>
     <%= f.label :length %><br>
     <%= f.text_field :length %>
