add validation for name, length, width models and display error messages in the erb

--- a/app/views/fabrics/show.html.erb
+++ b/app/views/fabrics/show.html.erb
@@ -21,7 +21,11 @@
 
 <p>
   <strong>Price:</strong>
-  <%= @fabric.price %>
+  <% if @fabric.price != nil %>
+    <%= @fabric.price %>
+  <% else %> 
+    no price given
+  <% end %>
 </p>
 
 <p>
