--- a/app/views/fabrics/new.html.erb
+++ b/app/views/fabrics/new.html.erb
@@ -1,5 +1,13 @@
 <h1>New Fabric Upload</h1>
 
+
+<% if @errors != nil %> 
+    <p>Please fix the following errors:</p>
+    <% @fabric.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+  <% end %>
+<% end %>
+
 <%= form_for :fabric, :html => {:multipart => true}, url: fabrics_path do |f| %>
   <p>
     <%= f.label :name %><br>
@@ -38,7 +46,7 @@
 
   <p>
     <%= f.file_field :swatch %>
-  </p>
+  </p> 
  
   <p>
     <%= f.submit %>
