--- a/app/views/fabrics/new.html.erb
+++ b/app/views/fabrics/new.html.erb
@@ -44,6 +44,7 @@
     <%= f.text_field :source %>
   </p>
 
+  <h2>Upload an image of your fabric, or skip this step for now</h2>
   <p>
     <%= f.file_field :swatch %>
   </p> 
