preliminary setup of slider display in eights of yards

--- a/app/views/fabrics/index.html.erb
+++ b/app/views/fabrics/index.html.erb
@@ -9,3 +9,5 @@
 		<li><%= link_to fabric.name, fabric_path(fabric) %></li>
 	<% end %>
 
+<%= link_to "add another fabric", new_fabric_path, class: "new_fabric" %>
+
