--- a/app/views/fabrics/show.html.erb
+++ b/app/views/fabrics/show.html.erb
@@ -11,10 +11,9 @@
 
 <p>
   <strong>Length:</strong>
-  <% yards = @fabric.length / 36 %>
-  <% yard_percentage = (@fabric.length / 36).to_f %> 
-  whole yards: <%= yards %><br>
-  yards decimal: <%= yard_percentage %>
+    <strong>yardage:</strong>
+    <%= @yardage %>
+
 
 </p>
 
