adds styling for the slider

--- a/app/assets/stylesheets/fabrics.scss
+++ b/app/assets/stylesheets/fabrics.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the fabrics controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#slider {
+	width: 50%;
+	margin-left: 2%;
+}
+
+.slider {
+	color: #f6931f;
+	border: 0;
+	font-weight: bold;
+}
+
