--- a/app/views/fabrics/new.html.erb
+++ b/app/views/fabrics/new.html.erb
@@ -21,7 +21,7 @@
 
 <p>
   <%= f.label :length %>:
-  <span id="slider_display"></span>
+  <span id="slider_display">1/8</span>
   <%= f.text_field :length, :id => 'amount', :class => 'slider' %>
   <div id="slider"></div>
 </p>
@@ -56,39 +56,9 @@
 <% end %>
 
  <script>
-   $(function() {
-    $( "#slider" ).slider({
-      value: 0,
-      min: .125,
-      max: 10,
-      step: .125,
-      slide: function( event, ui ) {
-        yardage = decToEighths(ui.value)
-        $("#slider_display").html(yardage)
-        $( "#amount" ).val(ui.value);;
-      }
-    });
-    $( "#amount" ).val($( "#slider" ).slider( "value" ) );
-  });
-
-   function decToEighths(value) {
-      var testHash = { 0: [''], .125: ['1/8'], .25: ['1/4'], .375: ['3/8'], .5: ['1/2'], .625: ['5/8'], .75: ['3/4'], .875: ['7/8']};
-    if (value < 1) {
-      console.log(testHash[value]);
-      return testHash[value];
-    } else {
-      var wholeYards = Math.floor(value)
-      var partialYardsDec = value - Math.floor(value)
-      var partialYards = testHash[partialYardsDec]
-      var yardage = wholeYards + " " + partialYards
-      console.log("Yardage: " + yardage)
-      return yardage
-    }   
-   }
-// lengthSlider()
-
+  lengthSlider()
  </script>
-}
+
 
 
 
