-refactors eigths calculation to its own method -adds edit and update functionality -form reflects prechosen values when edit is displayed -TO DO = slider beginning value!

--- a/app/views/fabrics/new.html.erb
+++ b/app/views/fabrics/new.html.erb
@@ -1,63 +1,9 @@
 <h1>New Fabric Upload</h1>
 
+<%= render partial: 'form' %>
 
-<% if @errors != nil %> 
-    <p>Please fix the following errors:</p>
-    <% @fabric.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
-  <% end %>
-<% end %>
 
-<%= form_for :fabric, :html => {:multipart => true}, url: fabrics_path do |f| %>
-  <p>
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </p>
 
-    <p>
-    <%= f.label :color %><br>
-    <%= f.text_field :color %>
-  </p>
-
-<p>
-  <%= f.label :length %>:
-  <span id="slider_display">1/8</span>
-  <%= f.text_field :length, :id => 'amount', :class => 'slider' %>
-  <div id="slider"></div>
-</p>
-
-<p>
-  <%= f.select(:width, options_for_select([45, 60])) %>
-</p>
-
-  <p>
-    <%= f.label :price %><br>
-    <%= f.text_field :price %>
-  </p>
-
-  <p>
-    <%= f.label :content %><br>
-    <%= f.text_field :content %>
-  </p>
-
-  <p>
-    <%= f.label :source %><br>
-    <%= f.text_field :source %>
-  </p>
-
-  <h2>Upload an image of your fabric, or skip this step for now</h2>
-  <p>
-    <%= f.file_field :swatch %>
-  </p> 
- 
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
-
- <script>
-  lengthSlider()
- </script>
 
 
 
