--- a/app/views/fabrics/_form.html.erb
+++ b/app/views/fabrics/_form.html.erb
@@ -34,6 +34,9 @@
       <div id="slider"></div><br>
       <%= f.label :width %>:
        <%= f.select(:width, options_for_select([45, 60])) %>
+       <script>
+      var length = '<%=@length%>'
+      lengthSlider(0.125)</script>  
   <% end %>
 
 </p>
