adds login and signup using bcrypt adds sessions controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,14 @@
 </head>
 <body>
 
-<p class="flash"><%= flash.notice %></p
+<p class="flash"><%= flash.notice %></p>
+
+<% if current_user %>
+  Signed in as <%= current_user.username %> | <%= link_to "Logout", '/logout' %>
+<% else %>
+  <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
+<% end %>
+
 
 <%= yield %>
 
