--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,9 +9,8 @@
   <%= @user.location %>
 </p>
 
-
 <p>
-  <%#= image_tag @fabric.swatch_url.to_s %>
+  <%= image_tag @user.avatar_url(:thumb).to_s %>
 </p>
 
 
