--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -39,6 +39,17 @@
     <%= f.password_field :password_confirmation %>
   </p>
 
+    <h2>Upload an image of yourself, or skip this step for now</h2>
+  <p>
+    <%= f.file_field :avatar %>
+  </p> 
+
+  <p>
+    <%= f.label :remote_avatar_url, "or image URL:" %><br>
+    <%= f.text_field :remote_avatar_url %>
+  </p>
+
+
 
 <!-- TO DO:  birthday only month and day -->
 <!-- make file uploader for avatar -->
