--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,5 +15,7 @@
 
 
 <%= link_to "edit", edit_user_path(@user) %>
+<br>
+<%= link_to "delete my account", user_path(@user), method: :delete, data: {confirm: "Really delete your account?"} %>
 
 
