sets up admin namespace with index page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 <% end %>
 
 <% if current_user && current_user.admin == true %>
-   | <%= link_to 'Admin Page'%>
+   | <%= link_to 'Admin Page', '/admin/users' %>
 <% end %>
 
 
