--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -5,9 +5,11 @@
 
 <ol>
 <% @users.each do |user| %>
-	<li><%= user.username %>
+	<li><%= link_to user.username, user_path(user) %>
 		<% if user.admin == true %>
-			(admin)		
+			(admin)</li>
 		<% end %>
-<% end %>
+	<% end %>
+</ol>
+
 
