--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,7 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+
  *= require_tree .
  *= require_self
  */
@@ -21,6 +22,13 @@
  *= require jquery-ui.min
  */
 
+$background_color: #A2C4C9;
+
+$button_color: #45818E;
+
+body {
+	background-color: $background_color;
+}
 
 
 
